fixed list alignment

--- a/client/src/styles/equipment.scss
+++ b/client/src/styles/equipment.scss
@@ -27,21 +27,23 @@
        
     .list1{
         padding: 0;
-            margin: 0 auto;
+            margin: .5rem;
+            text-align: left;
             @media screen and (min-width: 768px) { 
                
-                margin: 0;
+                margin: 0.5rem;
                 padding: 0;
         
             }
         .listItems1{
-            list-style: none;
+            list-style: circle;
             padding: 0;
-            margin: 0 auto;
-            font-family: 'Zilla Slab', serif;
+            margin: 0.5rem;
+            text-align: left;
+            font-family: 'Karma', serif;
             @media screen and (min-width: 768px) { 
                
-                margin: 0;
+                margin: 0.5rem;
                 padding: 0;
         
             }
