--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -105,7 +105,7 @@
             margin-top: 10%;
             line-height: 1.5rem;
             @media screen and (min-width: 768px) { 
-                width: 50%;
+                width: 75%;
                 margin: 0 auto;
             }
         }
